Text-overflow problem fixed for newsTitle

--- a/NewsSite/src/app/news/news.component.css
+++ b/NewsSite/src/app/news/news.component.css
@@ -4,3 +4,7 @@ img{
     object-fit:fill;
  }
  #card:hover{color:red;}
+ div {
+    
+    overflow: hidden;
+}
